--- a/src/podcast/home/podcategories/podnavbar.css
+++ b/src/podcast/home/podcategories/podnavbar.css
@@ -26,7 +26,7 @@
 .pod-grid {
   display: grid;
   grid-template-columns: 1fr 2fr;
-  gap: 1rem;
+  grid-gap: 1rem;
   border-bottom: 2px solid #fff;
   padding: 0 0 1.3rem 0;
 }
@@ -52,8 +52,12 @@
   display: flex;
   align-items: stretch;
   justify-content: flex-start;
-  gap: 1.5rem;
 }
+
+.pod-cta > * + * {
+  margin: 0 0 0 1.5rem;
+}
+
 .pod-btn {
   background: transparent;
   color: #fff;
@@ -65,8 +69,13 @@
   border: 2px solid #fff;
   display: flex;
   align-items: center;
-  gap: 0.5rem;
 }
+
+.play-button > * + * {
+  margin: 0 0 0 0.5rem;
+}
+
+
 .pod-subscribe {
   border: none;
   background-color: red;
